--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
             <br>
             <label for="model-select">Choose a Model:</label>
             <select id="model-select">
-                <option value="model1">Model 1: Car Dents Detection</option>
+                <option value="model1">YoloV8 Model</option>
                 <option value="model2">Model 2: Paint Scratches Detection</option>
                 <!-- Add more models as necessary -->
             </select>
