--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
             <label for="model-select">Choose a Model:</label>
             <select id="model-select">
                 <option value="model1">YoloV8 Model</option>
-                <option value="model2">Model 2</option>
+                <option value="model2">Detectron2</option>
                 <!-- Add more models as necessary -->
             </select>
             <br>
