--- a/templates/index.html
+++ b/templates/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Car Repair Advisor</title>
+    <title>DefectVisionAI</title>
     <link rel="stylesheet" href="static/styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Car Repair Advisor</h1>
+        <h1>Defect Vision AI</h1>
         <form id="upload-form">
             <label for="file-upload">Upload Image:</label>
             <input type="file" id="file-upload" accept="image/*">
@@ -19,6 +19,7 @@
             </select>
             <br>
             <button type="button" id="submit-button">Submit</button>
+            <button type="button" id="voice-command">Voice Command</button>
         </form>
 
         <div id="results" style="display: none;">
