--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
             <label for="model-select">Choose a Detection Model:</label>
             <select id="model-select">
                 <option value="model1">Model 1: Yolov8</option>
-                <option value="model2">Model 2: Mask R-CNN</option>
+                <option value="model2">Model 2: DetectronV2</option>
                 <option value="model3">Model 3: SAM</option>
             </select>
             <button type="button" id="submit-button">Submit for Analysis</button>
