--- a/templates/index.html
+++ b/templates/index.html
@@ -16,8 +16,11 @@
             <label for="model-select">Choose a Detection Model:</label>
             <select id="model-select">
                 <option value="model1">Model 1: Yolov8 Medium</option>
-                <option value="model2">Model 2: Yolov8 Mini</option>
-                <option value="model3">Model 3: Detectron</option>
+		<option value="model1">Model 2: Yolov8 Mini</option>
+		<option value="model1">Model 3: Yolov8 Large</option>
+		<option value="model1">Model 4: Yolov8 Large XL</option>
+                <option value="model2">Model 5: DetectronV2 Medium</option>
+                <option value="model2">Model 6: DetectronV2 Mini</option>
             </select>
             <button type="button" id="submit-button">Submit for Analysis</button>
         </form>
